@@ -80,8 +80,8 @@
     </para>
     <para>
       Even where licenses are DFSG-free and mutually compatible, users may
-      wish a way to identify software under certain licenses (for example,
-      if they have a problem with the Affero GPL).
+      wish for a way to identify software under certain licenses (if, for
+      example, they have special reasons to avoid certain licenses).
     </para>
   </section>
 
@@ -166,8 +166,8 @@
         in a package's <varname>Description</varname> field in Debian
         control files.  In some but not all cases, the first line may have
         special meaning as a synopsis, similar to how the
-        <varname>Description</varname> field uses it for the short
-        description. See Debian Policy's section 5.6.13, <ulink
+        <varname>Description</varname> field uses the first line for the
+        short description. See Debian Policy's section 5.6.13, <ulink
         url="http://www.debian.org/doc/debian-policy/ch-controlfields#s-f-Description"><quote>Description</quote></ulink>,
         for details.  For example, <varname>Disclaimer</varname> is a
         formatted text field that has no special first line, and
@@ -241,14 +241,17 @@
         </listitem>
       </itemizedlist>
       <para>
-        The <varname>Copyright</varname> and <varname>License</varname> fields
-        in the <emphasis>header paragraph</emphasis> may complement but do not
-        replace the <emphasis>Files paragraphs</emphasis>.  They can be used
-        to summarise the copyright notices or redistribution terms for the
-        whole package, such as when a work combines a permissive and a
-        copyleft license and the combination requires some clarification, or
-        to document a <emphasis>compilation copyright</emphasis> and license.
-        It is possible to use only <varname>License</varname> in the header
+        The <varname>Copyright</varname> and <varname>License</varname>
+        fields in the <emphasis>header paragraph</emphasis> may complement
+        but do not replace the <emphasis>Files paragraphs</emphasis>.  If
+        present, they summarise the copyright notices or redistribution
+        terms for the package as a whole.  For example, when a work
+        combines a permissive and a copyleft license,
+        <varname>License</varname> can be used to clarify the license
+        terms for the combination.  <varname>Copyright</varname> and
+        <varname>License</varname> together can also be used to document a
+        <emphasis>compilation copyright</emphasis> and license.  It is
+        possible to use only <varname>License</varname> in the header
         paragraph, but <varname>Copyright</varname> alone makes no sense.
       </para>
 
@@ -446,7 +449,7 @@ License: MPL-1.1
       <title><varname>Disclaimer</varname></title>
       <para>
         Formatted text, no synopsis: this field is used for non-free or
-        contrib packages to say that they are not part of Debian and to
+        contrib packages to state that they are not part of Debian and to
         explain why (see Debian Policy section <ulink
         url="http://www.debian.org/doc/debian-policy/ch-docs#s-copyrightfile">12.5</ulink>).
       </para>
@@ -605,6 +608,15 @@ Copyright 2009, 2010 Angela Watts</programlisting>
           </tgroup>
         </informaltable>
         Any other character following a backslash is an error.
+      </para>
+      <para>
+        This is the same pattern syntax as
+        <citerefentry><refentrytitle>fnmatch</refentrytitle>
+        <manvolnum>3</manvolnum></citerefentry> without the
+        <constant>FNM_PATHNAME</constant> flag, or the argument to the
+        <literal>-path</literal> test of the GNU <command>find</command>
+        command, except that <literal>[]</literal> wildcards are not
+        recognized.
       </para>
       <para>
         Multiple <varname>Files</varname> paragraphs are allowed.  The last
